add index & css coba1

--- a/capstone/index.html
+++ b/capstone/index.html
@@ -10,6 +10,13 @@
 
 <body>
     <main>
+        <div class="first-container">
+            <aside class="sidebar">
+                <div class="first-content">1</div>
+                <div class="first-content">2</div>
+            </aside>
+        </div>
+
         <div class="container1">
             <div class="content1">1</div>
             <div class="content1">2</div>
